[package]
name = "lb"
version = "2.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
histogram = "0.11"
ldap3 = "0.12"
rand = "0.9"
tokio = { version = "1.39", features = ["full", "macros", "rt"] }
uuid = { version = "1", features = ["v1", "v4"] }
